fix: mobile layout and multi-day period display - Resolve current activity overflow on mobile - Add date columns for periods > 1 day - Improve table responsiveness

--- a/src/app/ui/activities-table.component/activities-table.component.scss
+++ b/src/app/ui/activities-table.component/activities-table.component.scss
@@ -4,10 +4,24 @@
         grid-template-columns: 120px 1fr 100px 100px 68px;
     }
 
-    &__body {
-    }
+    &__body {}
+
     &__row {
         grid-template-columns: 120px 1fr 100px 100px 68px;
+    }
+
+    &__col--date {
+        display: none;
+    }
+
+    &.show-dates &__col--date {
+        display: block;
+    }
+    &.show-dates &__header {
+        grid-template-columns: 120px 1fr 60px 100px 60px 100px 68px;
+    }
+    &.show-dates &__row{
+        grid-template-columns: 120px 1fr 60px 100px 60px 100px 68px;
     }
 }
 
@@ -17,61 +31,62 @@
         &__header {
             display: none;
         }
-        
+
         &__body {
             display: flex;
             flex-direction: column;
             // gap: 20px;
         }
-        
+
         &__row {
             padding: 16px;
             display: grid;
             grid-template-columns: unset;
-            grid-template-areas: 
+            grid-template-areas:
                 "activity activity activity"
                 "cluster cluster cluster"
                 "start end duration"
-                ;
+            ;
             gap: 8px;
         }
-        
+
         .activities-table__col {
             &--activity {
                 grid-area: activity;
                 font-weight: 600;
                 font-size: 16px;
             }
-            
+
             &--cluster {
                 grid-area: cluster;
                 font-size: 10px;
                 line-height: 10px;
             }
-            
+
             &--start {
                 grid-area: start;
-                
+
                 &::before {
                     content: "С: ";
                     color: #aaa;
                     font-size: 12px;
                 }
             }
-            
+
             &--end {
                 grid-area: end;
+
                 &::before {
                     content: "По: ";
                     color: #aaa;
                     font-size: 12px;
                 }
             }
-            
+
             &--duration {
                 grid-area: duration;
                 text-align: right;
-                
+
                 &::before {
                     content: "Длит: ";
                     color: #aaa;
